--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,16 @@
 body{
-    color: deeppink;
+    color: #333;
  font-family: 'Arial';
- text-align: center;
+ text-align: left;
+}
+#container{
+width: 70%;
+padding: 1em;
+text-align: left;
+border: 1px solid #000;
+margin: 0 auto;
+}
+
+#container h1{
+    font-size: 20px;
 }
